<resources>
    <string name="app_name">Simple probabilities</string>
    <string name="main_menu">Main menu</string>
    <string name="choose_method">Choose method</string>
    <string name="permutations">permutations</string>
    <string name="combinations">combinations</string>
    <string name="placements">placements</string>
    <string name="without_repetition">without repetitions</string>
    <string name="with_repetitions">with repetitions</string>
    <string name="choose_method_permutations">Choose method permutations</string>
    <string name="choose_method_combinations">Choose method combinations</string>
    <string name="choose_method_placements">Choose method placements</string>
    <string name="enter_data_in_the_input_field">Enter data in the input field</string>
    <string name="enter_n">Enter n</string>
    <string name="enter_m">Enter m</string>
    <string name="enter_all_n">Enter n1 n2 … nk</string>
    <string name="calculate">Calculate</string>
    <string name="res_calculate_combination_with">Result calculate combinations with repetitions: \n</string>
    <string name="res_calculate_permutations_with">Result calculate permutations with repetitions: \n</string>
    <string name="res_calculate_placements_with">Result calculate placements with repetitions: \n</string>
    <string name="res_calculate_combination_without">Result calculate combinations without repetitions: \n</string>
    <string name="res_calculate_permutations_without">Result calculate permutations without repetitions: \n</string>
    <string name="res_calculate_placements_without">Result calculate placements without repetitions: \n</string>
    <string name="incorrectly">Data entered incorrectly</string>
    <string name="number_high">The number is too high</string>
    <string name="bach_choose_method">Bach choose method</string>
    <string name="back">Back</string>
    <string name="fill">Fill in the fields </string>
</resources>